--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
 
 apply plugin: 'com.bmuschko.docker-remote-api'
 
+version = '1.0.0'
+
 ext {
     dockerHubUser =  project.hasProperty('DOCKER_HUB_USER') ? DOCKER_HUB_USER : System.getenv('DOCKER_HUB_USER')
     dockerHubEmail =  project.hasProperty('DOCKER_HUB_EMAIL') ? DOCKER_HUB_EMAIL : System.getenv('DOCKER_HUB_EMAIL')
@@ -20,7 +22,7 @@ ext {
 
     dockerHostname = 'etcd.rsobook.fri.si'
     dockerImageName = String.format("%s/%s", dockerHubUser, project.name)
-    dockerImageTag = String.format("%s:%s", dockerImageName, "1.0")
+    dockerImageTag = String.format("%s:%s", dockerImageName, version)
     dockerContainerName = String.format("%s", project.name)
 }
 
@@ -102,7 +104,7 @@ task imageBuild(type: DockerBuildImage) {
 task imagePushToDockerHub(type: DockerPushImage){
     group 'docker'
     imageName = dockerImageName
-    tag = "1.0"
+    tag = version
 }
 
 task containerCreate(type: DockerCreateContainer) {
