--- a/kubernetes/etcd-service.yaml
+++ b/kubernetes/etcd-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: microservice-etcd
+  name: ms-etcd
 spec:
   type: ClusterIP
   ports:
@@ -10,4 +10,4 @@ spec:
     protocol: TCP
     targetPort: 2379
   selector:
-    app: microservice-etcd
+    app: ms-etcd
