--- a/kubernetes/etcd.yaml
+++ b/kubernetes/etcd.yaml
@@ -1,17 +1,17 @@
-apiVersion: apps/v1beta1
+apiVersion: v1
 kind: Deployment
 metadata:
-  name: microservice-etcd
+  name: ms-etcd
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: microservice-etcd
+        app: ms-etcd
     spec:
       containers:
-      - image: rsobook/microservice-etcd
-        name: microservice-etcd
+      - image: rsobook/ms-etcd:1.0.0
+        name: ms-etcd
         ports:
         - containerPort: 2379
           name: client
