--- a/kubernetes/etcd.yaml
+++ b/kubernetes/etcd.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: ms-etcd
@@ -10,7 +10,7 @@ spec:
         app: ms-etcd
     spec:
       containers:
-      - image: rsobook/ms-etcd:1.0.0
+      - image: rsobook/ms-etcd:2.0.0
         name: ms-etcd
         ports:
         - containerPort: 2379
